# odin-gpio

./: README.md
client/: pyproject.toml
client/src/gpio/: adapter.py  config.cfg  controller.py  input_manager.py  output_manager.py
client/src/gpio/test_files/: button_toggle_multi_leds.py
client/src/odin_gpio_client/: adapter.py  config.cfg  controller.py  output_manager.py
client/src/odin_gpio_client/test_files/: button_toggle_led.py  getlines.py  multilines.py  pushbutton.py  toggle_multilines.py  watchline.py
server/: pyproject.toml
server/src/odin_gpio_server/: adapter.py  controller.py
server/src/odin_gpio_server/config/: config.cfg
server/src/pico_comms/: adapter.py  controller.py
server/src/pico_comms/config/: config.cfg
server/src/trigger_adapter/: adapter.py  controller.py
