[build-system]
requires = ["setuptools>=61", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "odin-gpio-client"
description = "Client adapter for BeagleBoneBlack GPIO."
authors = [
    { name="William Brown", email="william.brown@stfc.ac.uk" }
]
requires-python = ">=3.8"
dependencies = [
    "odin_control @ git+https://git@github.com/odin-detector/odin-control.git",
    "tornado>=4.3",
    "future"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
# Optional settings for setuptools_scm
write_to = "src/odin_pico/_version.py"
version_scheme = "no-guess-dev"
local_scheme = "node-and-date"
