[build-system]
requires = ["setuptools>=66", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "odin-gpio-server"
description = "Server Adapter for BeagleBoneBlack GPIO"
authors = [
    { name="Will Brown", email="william.brown@stfc.ac.uk" }
]
dynamic = ["version"]
requires-python = ">=3.8"
dependencies = [
    "odin_control @ git+https://git@github.com/odin-detector/odin-control@1.6.0#egg=odin-control",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
# Optional settings for setuptools_scm
write_to = "src/odin_gpio_server/_version.py"
version_scheme = "no-guess-dev"
local_scheme = "node-and-date"