[build-system]
requires = ["setuptools>=66"]
build-backend = "setuptools.build_meta"

[project]
name = "odin-gpio-server"
description = "Server Adapter for BeagleBoneBlack GPIO"
authors = [
    { name="Will Brown", email="william.brown@stfc.ac.uk" }
]
version = "1.0.0"
requires-python = ">=3.8"
dependencies = [
    "odin_control @ git+https://git@github.com/odin-detector/odin-control@1.6.0#egg=odin-control",
]

[tool.setuptools.packages.find]
where = ["src"]
